--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
         <p>How to play</p>
 
         <p class="view"><a href="https://github.com/Devon-S/Sea-Divided-Site">View the Project on GitHub <small>Devon-S/Sea-Divided-Site</small></a></p>
-
-
+# Videos
+  <ul>
+          <li><a href="https://www.youtube.com/watch?v=co_Qe2wr9FI">Video 1 </a></li>
+  </ul>
+   <ul>
+          <li><a href="https://youtu.be/LpwQZvV2_">Video 2 </a></li>
+  </ul>
+        
         <ul>
-          <li><a href="https://github.com/Devon-S/Sea-Divided-Site/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Devon-S/Sea-Divided-Site/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Devon-S/Sea-Divided-Site">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/worldofbalance/unity-game-client">Go to Project </a></li>
         </ul>
       </header>
       <section>
