--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="https://www.youtube.com/watch?v=co_Qe2wr9FI">Video 1 </a></li>
   </ul>
    <ul>
-          <a href="https://youtu.be/LpwQZvV2_">Video 2 </a>
+         <li> <a href="https://youtu.be/LpwQZvV2_">Video 2 </a></li>
   </ul>
         
         <ul>
