--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ If you are having trouble, remember to use your stamina as it comes back relativ
 <p>the original concept for the game was to make an ocean based biome simulator but due to time constraints we scaled the focus to just be a simplistic simulation of specific foodchain</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/Devon-S">Devon-S</a></p>
+        <p>This page is maintained by <a href="https://github.com/Devon-S">Devon-S</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
